# Adaptive_Sensing_Research_Tool

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/api/: __init__.py  main.py
backend/api/routers/: health.py  manifests.py  preview.py  runs.py
backend/awsrt_core/io/: fields.py  manifests.py  paths.py  renders.py
backend/awsrt_core/schemas/: manifests.py  preview.py  run.py  wildfire_env.py
backend/awsrt_core/sim/: belief.py  fire_model.py  wildfire_env.py
data/manifests/: env-4390542af9-0b0526.json  env-4390542af9-e46887.json  env-b729e0743c-48b76a.json  env-b729e0743c-5914d8.json  env-b729e0743c-7048bd.json  env-b729e0743c-8c026e.json  env-b729e0743c-99810a.json  env-b729e0743c-9d6fc7.json  env-b729e0743c-f260de.json  env-b729e0743c-fceb13.json  env_e0_flat.json  fire-2b52b1739e-954434.json  fire-2ee367439a-3fd67b.json  fire-38b9cc47e1-82cc20.json  fire-9548573814-e93f48.json  fire-a9db96e9cf-759480.json  fire-c4bdd9a531-f57ba7.json  fire-cbfc833f48-0aa922.json  fire-fbce74ddc4-5730a4.json  fire_single_center.json  sensors_fleet8.json
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/environment/: page.tsx
frontend/app/fire/: page.tsx
frontend/app/replay/: page.tsx
frontend/app/run/: page.tsx
frontend/app/sensors/: page.tsx
frontend/lib/: api.ts
frontend/styles/: styles.css
scripts/: dev.sh  seed_demo.py
